# coarse-graining-AL

./: .gitignore  LICENSE.md  README.md  environment.yaml  pyproject.toml
main/: analyse_checkpoint.py  train.py
main/active_learning/: active_learning_dataset.py  active_learning_managers.py  free_energy_ensemble.py
main/active_learning/samplers/: active_learning_sampler.py  active_learning_sampler_MC.py
main/configs/: aldp_AL.yaml  aldp_grid.yaml  mb_AL.yaml
main/models/: RNVP_flows.py  flow_base.py  free_energy_models.py  gaussian_flow_1D.py  utils.py
main/models/internal_coordinates_flows/: couplings.py  flows.py  periodic_features_cos_sin.py
main/systems/: system.py
main/systems/aldp/: aldp_system.py  coord_trafo.py  create_model.py  dihedral_utils.py  target_distribution.py
main/systems/aldp/datasets/: convert_aldp_dataset.py
main/systems/aldp/simulation/: evaluate_dihedrals.py  initialize_simulation.py  run_reference_sim.py
main/systems/aldp/simulation/input_files/: minimum_energy_configuration.pt
main/systems/aldp/simulation/reporters/: force_reporter.py  numpy_append.py  position_reporter.py
main/systems/mb/: mb_system.py  plot_MB_potential.py  potential.py
main/systems/mb/datasets/: starting_positions.npy
main/utils/: FastTensorDataLoader.py  call_model_batched.py  matplotlib_helpers.py  newline_tqdm.py  plot_free_energy.py  prepare_training.py  sampling.py  training_utils.py  wandb_helpers.py
main/wandb/: settings
